--- a/css/index.css
+++ b/css/index.css
@@ -1,27 +1,197 @@
+.marginPaddingBorder {
+  margin: 5%;
+  padding: 5%;
+  border: 1.5px double #9f7462;
+}
+/* http://meyerweb.com/eric/tools/css/reset/
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
+body {
+  line-height: 1;
+}
+ol,
+ul {
+  list-style: none;
+}
+blockquote,
+q {
+  quotes: none;
+}
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
 * {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 65.2%;
 }
-nav {
+body {
+  background-image: url("images\background.jpg");
+}
+.nav-container {
+  margin: 1%;
   display: flex;
+  align-items: center;
   justify-content: center;
+  border-bottom: 1.5px solid #9f7462;
+  border-style: double;
 }
-nav a {
-  padding: 2em;
-  text-decoration: none;
+.divider-bar {
+  border-bottom: 1.5px solid;
+  border-bottom-color: #00A693;
 }
 .container {
+  width: 80%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   text-align: center;
   margin: 2%;
   padding: 5%;
 }
+nav {
+  max-height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+nav img {
+  max-height: 50px;
+}
+nav a {
+  padding: 2em;
+  text-decoration: none;
+  color: #00A693;
+}
+footer {
+  border-top: 1.5px #9f7462;
+  border-style: double;
+}
+.divider-bar {
+  border-bottom: 2px;
+}
 .header {
   margin: 5%;
+  padding: 5%;
+  border: 1.5px double #9f7462;
 }
 .middle-section {
   margin: 5%;
+  padding: 5%;
+  border: 1.5px double #9f7462;
 }
 .bottom-section {
   margin: 5%;
+  padding: 5%;
+  border: 1.5px double #9f7462;
 }
