--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,18 @@
 .marginPaddingBorder {
-  margin: 5%;
-  padding: 5%;
-  border: 1.5px double #9f7462;
+  margin: 2%;
+  padding: 2%;
+}
+.roundedEdges {
+  border-radius: 10px;
+}
+.centering {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.imgProp {
+  border-radius: 10px;
+  max-height: 500px;
 }
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
@@ -135,35 +146,61 @@ table {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 65.2%;
 }
-body {
-  background-image: url("images\background.jpg");
-}
 .nav-container {
-  margin: 1%;
+  margin: 0;
   display: flex;
   align-items: center;
   justify-content: center;
-  border-bottom: 1.5px solid #9f7462;
   border-style: double;
+  background: black;
 }
-.divider-bar {
-  border-bottom: 1.5px solid;
-  border-bottom-color: #00A693;
+.nav-container :hover {
+  transition: 0.2s;
+  color: white;
+}
+@media (max-width: 800px) {
+  .nav-container {
+    width: 100%;
+  }
+}
+h1 {
+  font-size: 3em;
+  padding: 4%;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: #00A693;
+}
+h2 {
+  font-size: 1.5em;
+  padding: 3%;
+}
+p {
+  padding: 3%;
+  font-size: 1.1em;
 }
 .container {
-  width: 80%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   text-align: center;
-  margin: 2%;
-  padding: 5%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-bottom: 5%;
 }
 nav {
   max-height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+@media (max-width: 800px) {
+  nav {
+    width: 100%;
+    padding: 0.1%;
+    margin: 0;
+    font-size: 1.2em;
+  }
 }
 nav img {
   max-height: 50px;
@@ -175,23 +212,91 @@ nav a {
 }
 footer {
   border-top: 1.5px #9f7462;
-  border-style: double;
+  background-color: black;
 }
-.divider-bar {
-  border-bottom: 2px;
+.rightsReserved {
+  text-align: center;
+  color: grey;
+  padding: 1%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .header {
-  margin: 5%;
-  padding: 5%;
-  border: 1.5px double #9f7462;
+  margin: 2%;
+  padding: 2%;
+}
+.topContainer {
+  padding: 1%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.headerImage {
+  margin: 0;
+  width: 100%;
+}
+.header img {
+  max-width: 400px;
+  border-radius: 10px;
+}
+@media (max-width: 800px) {
+  .header img {
+    max-width: 100%;
+  }
+}
+.headerContainer {
+  display: flex;
+  padding: 2%;
+}
+@media (max-width: 800px) {
+  .headerContainer {
+    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
 .middle-section {
-  margin: 5%;
-  padding: 5%;
-  border: 1.5px double #9f7462;
+  display: flex;
+  margin: 2%;
+  padding: 2%;
+}
+.middle-section img {
+  border-radius: 10px;
+  max-height: 500px;
+}
+@media (max-width: 800px) {
+  .middle-section .middleContainer {
+    padding-right: 5%;
+  }
+}
+@media (max-width: 800px) {
+  .middle-section {
+    justify-content: space-between;
+  }
 }
 .bottom-section {
-  margin: 5%;
-  padding: 5%;
-  border: 1.5px double #9f7462;
+  display: flex;
+  margin: 2%;
+  padding: 2%;
+}
+.bottom-section img {
+  border-radius: 10px;
+  max-height: 500px;
+}
+@media (max-width: 800px) {
+  .bottom-section .bottomContainer {
+    padding-left: 5%;
+  }
+}
+@media (max-width: 800px) {
+  .bottom-section {
+    align-items: center;
+  }
+}
+.quote h1 {
+  width: 100%;
+  font-size: 2.5em;
+  color: black;
+  font-style: italic;
 }
