--- a/less/global.less
+++ b/less/global.less
@@ -2,27 +2,48 @@
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 65.2%;
 }
-body{
-    background-image: url("images\background.jpg");
-}
+// body{
+//     background-image: url("images\background.jpg");
+// }
 .nav-container{
-    margin: 1%;
+    margin: 0;
     display: flex;
     align-items: center;
     justify-content: center;
-    border-bottom: 1.5px solid @secondaryColor;
+    // border-bottom: 1.5px solid @secondaryColor;
     border-style: double;
+    background: black;
+    :hover{
+        transition: 0.2s;
+        color: white;
+    }
+    @media @tablet{
+        width: 100%;
+        // padding: 4%;
+    }
 }
-.divider-bar{
-    border-bottom: 1.5px solid;
-    border-bottom-color: @mainColor;
+h1{
+    font-size: 3em;
+    padding: 4%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: @mainColor;
+}
+h2{
+    font-size: 1.5em;
+    padding:3%;
+}
+p{
+    padding: 3%;
+    font-size: 1.1em;
 }
 .container{
-    width: 80%;
+    width: 90%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    align-items: center;
     text-align: center;
-    margin: 2%;
-    padding: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 5%;
 }
