--- a/less/navi.less
+++ b/less/navi.less
@@ -1,11 +1,13 @@
 
 nav {
     max-height: 300px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // border-bottom: 2px solid;
-    // border-bottom-color: @mainColor;
+    .centering;
+    @media @tablet{
+        width: 100%;
+        padding: 0.1%;
+        margin: 0;
+        font-size: 1.2em;
+    }
 }
 nav img{
     max-height: 50px;
