--- a/less/variables.less
+++ b/less/variables.less
@@ -4,7 +4,7 @@
 @second-color: #9f7462;
 
 //Tablet-View
-@Tablet: ~"(max-width: 800px)";
+@tablet: ~"(max-width: 800px)";
 
 // Phone-View
 @mobile: ~"(max-width: 500px)";
