Mobile mode added

--- a/less/footer.less
+++ b/less/footer.less
@@ -1,8 +1,21 @@
 footer{
     border-top: 1.5px @secondaryColor;
     background-color: black;
+    width: 100%;
+}
+.footerContainer{
+    .centering;
+    .hov;
+    img{
+        max-height: 50px;
+        padding: 3%;
+}
+    @media @tablet{
+        flex-direction: column;
+    }
 }
 .rightsReserved{
+    font-size: 0.7em;
     text-align: center;
     color: grey;
     padding: 1%;
