--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,10 @@
   border-radius: 10px;
   max-height: 500px;
 }
+.hov :hover {
+  transition: 0.2s;
+  color: white;
+}
 /* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain)
@@ -146,28 +150,16 @@ table {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size: 65.2%;
 }
-.nav-container {
-  margin: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-style: double;
-  background: black;
-}
-.nav-container :hover {
-  transition: 0.2s;
-  color: white;
-}
-@media (max-width: 800px) {
-  .nav-container {
-    width: 100%;
-  }
-}
 h1 {
   font-size: 3em;
   padding: 4%;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: #00A693;
+}
+@media (max-width: 500px) {
+  h1 {
+    font-size: 2em;
+  }
 }
 h2 {
   font-size: 1.5em;
@@ -175,7 +167,8 @@ h2 {
 }
 p {
   padding: 3%;
-  font-size: 1.1em;
+  font-size: 0.9em;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container {
   width: 90%;
@@ -199,22 +192,77 @@ nav {
     width: 100%;
     padding: 0.1%;
     margin: 0;
-    font-size: 1.2em;
+    font-size: 0.9em;
+    justify-content: space-evenly;
+  }
+  nav img {
+    max-width: 100px;
   }
 }
-nav img {
+@media (max-width: 500px) {
+  nav {
+    flex-direction: column;
+    padding: 4%;
+  }
+}
+.navContainer {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-style: double;
+  background: black;
+}
+.navContainer :hover {
+  transition: 0.2s;
+  color: white;
+}
+.navContainer img {
   max-height: 50px;
+  padding: 3%;
+}
+@media (max-width: 800px) {
+  .navContainer {
+    width: 100%;
+    flex-direction: column-reverse;
+  }
+}
+@media (max-width: 500px) {
+  .navContainer {
+    flex-direction: column-reverse;
+  }
 }
 nav a {
   padding: 2em;
   text-decoration: none;
   color: #00A693;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 footer {
   border-top: 1.5px #9f7462;
   background-color: black;
+  width: 100%;
+}
+.footerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footerContainer :hover {
+  transition: 0.2s;
+  color: white;
+}
+.footerContainer img {
+  max-height: 50px;
+  padding: 3%;
+}
+@media (max-width: 800px) {
+  .footerContainer {
+    flex-direction: column;
+  }
 }
 .rightsReserved {
+  font-size: 0.7em;
   text-align: center;
   color: grey;
   padding: 1%;
@@ -236,16 +284,19 @@ footer {
   width: 100%;
 }
 .header img {
-  max-width: 400px;
+  width: 70%;
   border-radius: 10px;
 }
 @media (max-width: 800px) {
   .header img {
-    max-width: 100%;
+    width: 100%;
   }
 }
 .headerContainer {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   padding: 2%;
 }
 @media (max-width: 800px) {
@@ -258,6 +309,7 @@ footer {
 }
 .middle-section {
   display: flex;
+  align-items: center;
   margin: 2%;
   padding: 2%;
 }
@@ -266,8 +318,8 @@ footer {
   max-height: 500px;
 }
 @media (max-width: 800px) {
-  .middle-section .middleContainer {
-    padding-right: 5%;
+  .middle-section img {
+    max-width: 250px;
   }
 }
 @media (max-width: 800px) {
@@ -275,8 +327,27 @@ footer {
     justify-content: space-between;
   }
 }
+@media (max-width: 500px) {
+  .middle-section {
+    flex-direction: column-reverse;
+    padding: 0;
+  }
+}
+@media (max-width: 800px) {
+  .middleContainer {
+    padding-right: 10%;
+  }
+}
+@media (max-width: 500px) {
+  .middleContainer {
+    padding: 0;
+    flex-direction: column-reverse;
+    align-items: center;
+  }
+}
 .bottom-section {
   display: flex;
+  align-items: center;
   margin: 2%;
   padding: 2%;
 }
@@ -285,18 +356,53 @@ footer {
   max-height: 500px;
 }
 @media (max-width: 800px) {
-  .bottom-section .bottomContainer {
-    padding-left: 5%;
+  .bottom-section img {
+    max-width: 250px;
+  }
+}
+@media (max-width: 500px) {
+  .bottom-section {
+    flex-direction: column;
   }
 }
 @media (max-width: 800px) {
-  .bottom-section {
-    align-items: center;
+  .bottomContainer {
+    padding-left: 10%;
   }
+}
+@media (max-width: 500px) {
+  .bottomContainer {
+    flex-direction: column;
+    align-items: center;
+    margin: 0;
+    padding: 0;
+  }
+}
+.quote {
+  padding-top: 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 .quote h1 {
   width: 100%;
   font-size: 2.5em;
   color: black;
   font-style: italic;
+  padding-top: 10%;
+}
+@media (max-width: 500px) {
+  .quote h1 {
+    font-size: 1.7em;
+  }
+}
+.quote img {
+  max-width: 500px;
+  border-radius: 10px;
+}
+@media (max-width: 500px) {
+  .quote img {
+    max-width: 400px;
+  }
 }
