--- a/less/global.less
+++ b/less/global.less
@@ -5,28 +5,15 @@
 // body{
 //     background-image: url("images\background.jpg");
 // }
-.nav-container{
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    // border-bottom: 1.5px solid @secondaryColor;
-    border-style: double;
-    background: black;
-    :hover{
-        transition: 0.2s;
-        color: white;
-    }
-    @media @tablet{
-        width: 100%;
-        // padding: 4%;
-    }
-}
+
 h1{
     font-size: 3em;
     padding: 4%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: @mainColor;
+    @media @mobile{
+        font-size: 2em;
+    }
 }
 h2{
     font-size: 1.5em;
@@ -34,7 +21,8 @@ h2{
 }
 p{
     padding: 3%;
-    font-size: 1.1em;
+    font-size: .9em;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 .container{
     width: 90%;
