--- a/less/home-page.less
+++ b/less/home-page.less
@@ -13,17 +13,18 @@
 .headerImage{
     margin: 0;
     width: 100%;
-    // .roundedEdges;
 }
 .header img{
-    max-width: 400px;
+    width: 70%;
     .roundedEdges;
     @media @tablet{
-        max-width: 100%;
+        width: 100%;
     }
 }
 .headerContainer{
-    display: flex;
+    .centering;
+    flex-direction: column;
+    // align-items: center;
     padding: 2%;
     @media @tablet{
         flex-direction: column;
@@ -33,39 +34,80 @@
 }
 .middle-section{
     display: flex;
+    align-items: center;
     .marginPaddingBorder;
     img{
         .imgProp;
-    }
-    .middleContainer{
         @media @tablet{
-            padding-right: 5%;
+            max-width: 250px;
         }
     }
     @media @tablet{
         justify-content: space-between;
     }
+    @media @mobile{
+        flex-direction: column-reverse;
+        padding: 0;
+    }
 }
+.middleContainer{
+        @media @tablet{
+            padding-right: 10%;
+        }
+        @media @mobile{
+            padding: 0;
+            flex-direction: column-reverse;
+            align-items: center;
+        }
+    }
 .bottom-section{
     display: flex;
+    align-items: center;
     .marginPaddingBorder;
     img{
         .imgProp;
-    }
-    .bottomContainer{
         @media @tablet{
-            padding-left: 5%;
+            max-width: 250px;
         }
     }
-    @media @tablet{
-        align-items: center;
+    // @media @tablet{
+    //     align-items: center;
+    // }
+    @media @mobile{
+        flex-direction: column;
     }
 }
+.bottomContainer{
+        @media @tablet{
+            padding-left: 10%;
+        }
+        @media @mobile{
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            padding: 0;
+        }
+ }
+
 .quote{
+    padding-top: 5%;
+    .centering;
+    flex-direction: column;
     h1{
         width: 100%;
         font-size: 2.5em;
         color: black;
         font-style: italic;
+        padding-top: 10%;
+        @media @mobile{
+            font-size: 1.7em;
+        }
+    }
+    img{
+        max-width: 500px;
+        .roundedEdges;
+        @media @mobile{
+            max-width: 400px;
+        }
     }
 }
