--- a/less/navi.less
+++ b/less/navi.less
@@ -6,14 +6,39 @@ nav {
         width: 100%;
         padding: 0.1%;
         margin: 0;
-        font-size: 1.2em;
+        font-size: .9em;
+        justify-content: space-evenly;
+        img{
+            max-width: 100px;
+        }
+    }
+    @media @mobile{
+        flex-direction: column;
+        padding: 4%;
     }
 }
-nav img{
-    max-height: 50px;
+.navContainer{
+    margin: 0;
+    .centering;
+    // border-bottom: 1.5px solid @secondaryColor;
+    border-style: double;
+    background: black;
+    .hov;
+    img{
+        max-height: 50px;
+        padding: 3%;
+    }
+    @media @tablet{
+        width: 100%;
+        flex-direction: column-reverse;
+    }
+    @media @mobile{
+        flex-direction: column-reverse;
+    }
 }
 nav a{
     padding: 2em;
     text-decoration: none;
     color: @mainColor;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
