--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,13 +2,14 @@
 //     border-bottom: 2px;
 // }
 .header{
-    .marginPaddingBorder;
+    // .marginPaddingBorder;
 }
 .topContainer{
-    padding: 1%;
+    padding-top: 5%;
+    padding-bottom: 5%;
     .centering;
     flex-direction: column;
-
+    border-bottom: 1px solid @secondaryColor;
 }
 .headerImage{
     margin: 0;
@@ -24,8 +25,8 @@
 .headerContainer{
     .centering;
     flex-direction: column;
-    // align-items: center;
     padding: 2%;
+    border-bottom: 1px solid @secondaryColor;
     @media @tablet{
         flex-direction: column;
         .centering;
@@ -36,6 +37,8 @@
     display: flex;
     align-items: center;
     .marginPaddingBorder;
+    padding: 6%;
+    border-bottom: 1px solid @secondaryColor;
     img{
         .imgProp;
         @media @tablet{
@@ -64,6 +67,8 @@
     display: flex;
     align-items: center;
     .marginPaddingBorder;
+    padding: 6%;
+    border-bottom: 1px solid @secondaryColor;
     img{
         .imgProp;
         @media @tablet{
