--- a/less/global.less
+++ b/less/global.less
@@ -1,11 +1,8 @@
 *{
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 65.2%;
+    // box-sizing: border-box;
 }
-// body{
-//     background-image: url("images\background.jpg");
-// }
-
 h1{
     font-size: 3em;
     padding: 4%;
@@ -18,6 +15,7 @@ h1{
 h2{
     font-size: 1.5em;
     padding:3%;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
 p{
     padding: 3%;
