--- a/less/global.less
+++ b/less/global.less
@@ -22,7 +22,7 @@ article {
    h2 {
      margin: 0% 0%;
      color: @main-color;
-     text-shadow: 3px 3px 6px black;
+     text-shadow: 3px 3px 6px @second-color;
      font-size: 300%;
    }
 
@@ -36,9 +36,6 @@ article {
   padding: 5% 5% 5% 5%;
   margin: 0% 0%;
   background: black;
-  // background: linear-gradient(217deg, rgba(0, 0, 0, 0), rgb(180, 179, 179) 70.71%),
-  // linear-gradient(127deg, rgb(104, 62, 62), rgba(19, 7, 7, 0) 70.71%),
-  // linear-gradient(336deg, rgba(5, 5, 32, 0.8), rgba(0, 0, 0, 0) 70.71%);
 
   a {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -81,7 +78,7 @@ section img {
 
 section h2 {
   color: @main-color;
-  text-shadow: 3px 3px 6px black;
+  text-shadow: 3px 3px 6px @second-color;
   font-size: 290%;
   margin: 2% 0%;
   text-align: center;
@@ -100,14 +97,14 @@ p {
 
 h1 {
   color: @main-color;
-  text-shadow: 3px 3px 6px black;
+  text-shadow: 3px 3px 6px @second-color;
   font-size: 500%;
   text-align: center;
 }
 
 h3 {
   color: @main-color;
-  text-shadow: 3px 3px 6px black;
+  text-shadow: 3px 3px 6px @second-color;
   font-size: 100%;
 }
 
@@ -144,3 +141,69 @@ form label {
 
 }
 
+.container-bio {
+
+  background: black;
+  text-align: center;
+
+  h1 {
+    color: @main-color;
+    text-shadow: 3px 3px 6px @second-color;
+    font-size: 500%;
+    text-align: center;
+    margin-top: 0%;
+    margin-bottom: 0%;
+  }
+
+  h4 {
+    color: @main-color;
+    text-shadow: 3px 3px 6px @second-color;
+    font-size: 200%;
+    text-align: center;
+    margin-top: 0%;
+    margin-bottom: 0%;
+  }
+
+  h2 {
+    color: @main-color;
+    text-shadow: 3px 3px 6px @second-color;
+    font-size: 350%;
+    text-align: center;
+    margin-top: 0%;
+    margin-bottom: 0%;
+  }
+
+  img {
+    border: 1px solid @main-color;
+    border-radius: 15%;
+    width: 33%;
+    height: 15%;
+    margin-top: 2%;
+  }
+
+  p {
+    color: @second-color;
+    font-size: x-large;
+    margin: 1% 1%;
+  }
+
+  ul {
+    list-style-type: none;
+
+  li {
+    margin: 1% 0%;
+    color: @second-color;
+
+    a {
+      font-size: xx-large;
+    
+      i {
+        color: red;
+      }
+    
+    }
+
+  }
+}
+
+}
