--- a/css/index.css
+++ b/css/index.css
@@ -96,9 +96,6 @@ article p {
 .container .Social-Media a i {
   color: red;
 }
-.container form label {
-  color: #00A693;
-}
 @media (max-width: 800px) {
   .container .features article {
     width: 25%;
@@ -147,7 +144,7 @@ article p {
 .container-bio p {
   color: #9f7462;
   font-size: x-large;
-  margin: 1% 1%;
+  margin: 1% 15%;
 }
 .container-bio ul {
   list-style-type: none;
@@ -161,6 +158,9 @@ article p {
 }
 .container-bio ul li a i {
   color: red;
+}
+.container-bio form label {
+  color: #00A693;
 }
 nav {
   padding-bottom: 1%;
