--- a/less/global.less
+++ b/less/global.less
@@ -17,6 +17,9 @@ h2{
     padding:3%;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
 }
+i{
+    font-size: 3em;
+}
 p{
     padding: 3%;
     font-size: .9em;
