--- a/less/footer.less
+++ b/less/footer.less
@@ -12,6 +12,9 @@ footer{
 }
     @media @tablet{
         flex-direction: column;
+        margin: 0;
+        padding: 0;
+
     }
 }
 .rightsReserved{
