--- a/less/global.less
+++ b/less/global.less
@@ -19,6 +19,7 @@ h2{
 }
 i{
     font-size: 3em;
+    padding: 3%;
 }
 p{
     padding: 3%;
@@ -35,4 +36,10 @@ p{
     padding-left: 5%;
     padding-right: 5%;
     padding-bottom: 5%;
+    @media @mobile{
+        width: 100%;
+        padding: 0;
+        margin: 0;
+
+    }
 }
