--- a/less/navi.less
+++ b/less/navi.less
@@ -14,7 +14,7 @@ nav {
     }
     @media @mobile{
         flex-direction: column;
-        padding: 4%;
+        padding: 0;
     }
 }
 .navContainer{
